<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CalibrationData" Id="{afee19e0-65bb-42e5-a931-500e7dce160f}">
    <Declaration><![CDATA[TYPE ST_CalibrationData :
STRUCT
	dDateTime 		: DT;
	iPumpNumber 	: USINT;
	sStep			: STRING(64);
	rTareWeigth		: LREAL;
	rGrossWeigth 	: LREAL;
	rNetWeigth		: LREAL;
	rNetVolume		: LREAL;
	rTargetVolume	: LREAL;
	rDifferencePercent	: LREAL;
	rDifferenceUl	: LREAL;
	rCriteria		: REAL;
	iPumpRevs		: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>