<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CalibrationInfo" Id="{1d284007-6929-4953-badc-ac18c9b81f89}">
    <Declaration><![CDATA[TYPE ST_CalibrationInfo :
STRUCT
	iCalibrationNumber 	: INT;
	iUserID				: STRING(128);
	rSolventDensity 	: REAL;
	iSolventID			: STRING(64);
	iSysMasterListRev 	: INT;
	iSysSettingsRev		: INT;
	iSolventRevision 	: INT;
	iReplicates			: INT;
	iAllowableFailures	: INT;
	iCalIntervalDays	: INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>