<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ReportInfo" Id="{982d093a-7aef-458d-9e53-8e7f605af9ad}">
    <Declaration><![CDATA[TYPE ST_ReportInfo :
STRUCT
	sReportName		: STRING(256); 
    sReoportSubName	: STRING(256);
    dTeportDate		: DATE;	
    sDystemID		: STRING(64);
    sDatabaseName 	: STRING(64);
    iPage			: USINT;
    sPrintedBy		: STRING(128);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>