<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Parameters_PCR" Id="{95040081-31c9-44c3-9662-dee4256ad368}">
    <Declaration><![CDATA[TYPE ST_Parameters_PCR :
STRUCT
	calibrationNumber  : DINT;
    userID             : STRING;
    density            : REAL;
    solvent            : STRING;
    sysMasterListRev   : DINT;
	sysSetRev		   : DINT;
    solventRevision    : DINT;
    allowableFailures  : DINT;
    replicates         : DINT;
    calIntervalDays    : DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>