<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Constant" Id="{d140bf42-bc87-4f0b-81c9-da525b4744eb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT

(*Calibration Reports Info*) //----------------------------------------------------------------------------------------------------------------------------
sPumpCalibrationReportName		: STRING(64) := 'Tegan Automated Sample Recovery System (ASRS)';
sPumpCalibrationReportSubName	: STRING(64) := 'Pump Calibration Report';
sSystemID						: STRING(16) := '0000';
sDatabaseName					: STRING(16) := 'Local DB';

(*Solvents Types into screen combo boxes*) //--------------------------------------------------------------------------------------------------------------
aSolventsAvailable : ARRAY[1..5] OF STRING := [ 'Solvent 1' , 'Solvent 2', 'Solvent 3', 'Solvent 4', 'Solvent 5' ];

(*IO Screen Texts and pages*) //---------------------------------------------------------------------------------------------------------------------------
aIOPageStarts : ARRAY[0..20] OF UDINT  := [ 0, 1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 40];

aIOList		  :	ARRAY[0..42] OF STRING := [	'  System Overview',
											'  Beckhoff C6030-0060 | Ultra-Compact Industrial PC',
											'  Beckhoff CP2921-0000 | Multi-touch Built-in Control Panel',
											'  Term 1 : EK1100 | EtherCAT Coupler',
											'  Term 2 : EL6070-0033 | License Key Terminal for TwinCAT 3.1',
											
											'  Term 3 : EL6910 | TwinSAFE PLC Module',
											
											'  Term 4 : EL1918 | 8-Channel Digital Input Terminal, TwinSAFE',
											'  Term 5 : EL1918 | 8-Channel Digital Input Terminal, TwinSAFE',
											'  Term 6 : EL1918 | 8-Channel Digital Input Terminal, TwinSAFE',
											
											'  Term 7 : EL2904 | 4-Channel Digital Output Terminal, TwinSAFEE',
											'  Term 8 : EL2904 | 4-Channel Digital Output Terminal, TwinSAFE',
											
											'  Term 9 : EL1809 | 16-Channel Digital Input Terminal',
											'  Term 10: EL2809 | 16-Channel Digital Output Terminal',
											
											'  Term 11: EL2624 | 4-channel Relay Output Terminal',
											
											'  Term 12: EL9410 | Power supply terminal for E-bus, with diagnostics',
											'  Term 13: EL3058 | 8-channel analog input, current, single-ended',
											'  Term 14: EL9576 | Brake chopper terminal',
											'  Term 15: EL7211-9014 | 1-channel Motion interface, servomotor',
											'  Term 16: EL7211-9014 | 1-channel Motion interface, servomotor',
											'  Term 17: EL3022 | 2-channel analog input, current, differential',
											'  Term 18: EL1809 | 16-channel digital input, 24 V DC, 3 ms',
											'  Term 19: EL2904 | 4-Channel Digital Output Terminal, TwinSAFE',
											'  Term 20: EL6631 |  2-port Communication PROFINET RT Interface',					
											
											'  Term 22: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 23: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 24: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 25: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 26: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 27: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 28: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 29: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 30: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 31: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 32: EL7062 | 2-channel Motion Stepper Motor Interface',
											'  Term 33: AX8101 | Single-axis Module',
											
											'  BOX 01  - AL1333 | IO-Link master with EtherCAT interface',
											'  BOX 02 - AMI8100 | Compact Integrated Servo Drives',	
											'  BOX 03 - AMI8100 | Compact Integrated Servo Drives',		
											'  BOX 04 - AMI8100 | Compact Integrated Servo Drives',
											'  BOX 05 - AMI8100 | Compact Integrated Servo Drives',	
											'  BOX 06 - AMI8100 | Compact Integrated Servo Drives'			
											];

	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>